# GK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  utils.py
gfx/: Light.h  Material.h  Texture.h
lab2/: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  Rectangle.cpp  Rectangle.h  Sierpinski.cpp  Sierpinski.h  Triangle.cpp  Triangle.h  main.cpp  mandelbrot.py  rectangle.py  sierpinski.py  triangle.py
lab3/: CMakeLists.txt  Egg.cpp  Egg.h  Terrain.cpp  Terrain.h  egg.py  main.cpp  terrain.py
lab4/: CMakeLists.txt  Egg.cpp  Egg.h  Renderable.h  Renderer.cpp  Renderer.h  main.cpp
lab5/: CMakeLists.txt  Egg.cpp  Egg.h  KeyBindings.md  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.h  main.cpp
lab6/: CMakeLists.txt  Egg.cpp  Egg.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TextureCacher.cpp  TextureCacher.h  main.cpp
lab6/textures/: jupiter.tga
utils/: Camera.h  Clock.cpp  Clock.h  Config.h  Noise.h  Singleton.h  Types.h  Utils.cpp  Utils.h
utils/handlers/: BasicCameraHandler.cpp  BasicCameraHandler.h
utils/handlers/keyboard/: KeyboardHandler.cpp  KeyboardHandler.h  SceneMovementHandler.cpp  SceneMovementHandler.h
utils/handlers/mouse/: MouseHandler.cpp  MouseHandler.h  SceneRotationMouseHandler.cpp  SceneRotationMouseHandler.h  SceneScaleMouseHandler.cpp  SceneScaleMouseHandler.h
utils/math/: Math.h  Types.h
